--- a/incubator/rancher/Chart.yaml
+++ b/incubator/rancher/Chart.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 name: rancher
-description: Install Rancher Server to manage Kubernetes clusters across providers.
 version: 2.0.6
-appVersion: v2.0.6
-home: https://rancher.com
-icon: https://github.com/rancher/ui/blob/master/public/assets/images/logos/welcome-cow.svg
+description: Install Rancher Server to manage Kubernetes clusters across providers.
 keywords:
   - rancher
+home: https://www.design4.pro
 sources:
-  - https://github.com/rancher/rancher
-  - https://github.com/rancher/server-chart
+  - https://github.com/design4pro/charts
 maintainers:
-  - name: Rancher Labs
-    email: charts@rancher.com
+  - name: DESIGN4PRO
+    email: dev@design4.pro
+    url: https://www.design4.pro
+icon: https://github.com/rancher/ui/blob/master/public/assets/images/logos/welcome-cow.svg
+appVersion: v2.0.6
