--- a/incubator/rancher/templates/service.yaml
+++ b/incubator/rancher/templates/service.yaml
@@ -8,6 +8,7 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
+  type: NodePort
   ports:
   - port: 80
     targetPort: 80
