--- a/incubator/rancher/templates/ingress.yaml
+++ b/incubator/rancher/templates/ingress.yaml
@@ -9,7 +9,6 @@ metadata:
     release: {{ .Release.Name }}
   annotations:
     kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
@@ -34,5 +33,5 @@ spec:
   tls:
   - hosts:
     - {{ .Values.hostname }}
-    secretName: tls-rancher-ingress
+    secretName: tls-rancher
 {{- end }}
